@@ -10,9 +10,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import ru.practicum.Client;
 import ru.practicum.EndpointHitDto;
 import ru.practicum.StatsDto;
+import ru.practicum.StatsFeignClient;
 import ru.practicum.event.Event;
 import ru.practicum.event.EventRepository;
 import ru.practicum.event.State;
@@ -24,6 +24,7 @@ import ru.practicum.utils.CheckEventService;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -35,28 +36,24 @@ public class EventPublicServiceImpl implements EventPublicService {
     EventRepository eventRepository;
     EventMapper eventMapper;
     CheckEventService checkEventService;
-
-    String url;
+    StatsFeignClient statsClient;
     String app;
-    Client client;
-
 
     static LocalDateTime minTime = LocalDateTime.of(1970, 1, 1, 0, 0);
     static LocalDateTime maxTime = LocalDateTime.of(3000, 1, 1, 0, 0);
     static DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-
     @Autowired
-    public EventPublicServiceImpl(EventRepository eventRepository, EventMapper eventMapper,
+    public EventPublicServiceImpl(EventRepository eventRepository,
+                                  EventMapper eventMapper,
                                   CheckEventService checkEventService,
-                                  @Value("${my.url}") String url,
+                                  StatsFeignClient statsClient,
                                   @Value("${my.app}") String app) {
         this.eventRepository = eventRepository;
         this.eventMapper = eventMapper;
         this.checkEventService = checkEventService;
-        this.url = url;
+        this.statsClient = statsClient;
         this.app = app;
-        client = new Client(url);
     }
 
     @Override
@@ -68,6 +65,7 @@ public class EventPublicServiceImpl implements EventPublicService {
         LocalDateTime start = rangeStart != null ? LocalDateTime.parse(rangeStart, formatter) : minTime;
         LocalDateTime end = rangeEnd != null ? LocalDateTime.parse(rangeEnd, formatter) : maxTime;
         text = text != null ? text : "";
+
         Page<Event> events = eventRepository.findEvents(text, paid, start, end, categories, onlyAvailable,
                 State.PUBLISHED, pageable);
         List<EventShortDto> dtos = events.map(eventMapper::toShortDto).toList();
@@ -76,59 +74,72 @@ public class EventPublicServiceImpl implements EventPublicService {
             dtos = events.stream()
                     .sorted((event1, event2) -> {
                         if (sort.equals("EVENT_DATE")) {
-                            if (event1.getEventDate().isBefore(event2.getEventDate()))
-                                return -1;
-                            else
-                                return 1;
+                            return event1.getEventDate().compareTo(event2.getEventDate());
                         } else if (sort.equals("VIEWS")) {
-                            return (int) (event1.getViews() - event2.getViews());
+                            return Long.compare(event1.getViews(), event2.getViews());
                         }
-                        return 1;
+                        return 0;
                     })
                     .map(eventMapper::toShortDto)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         hitStats(request);
 
-        // Получаем список URI для всех событий
         List<String> uris = dtos.stream()
                 .map(dto -> request.getRequestURI() + "/" + dto.getId())
                 .collect(Collectors.toList());
 
-        // Получаем статистику просмотров для всех URI
-        List<StatsDto> stats = client.getStats(minTime.format(formatter), maxTime.format(formatter), uris, true);
+        List<StatsDto> stats = getStats(request.getRequestURI(), uris);
 
-        // Устанавливаем количество просмотров для каждого события
-        for (EventShortDto dto : dtos) {
-            stats.stream()
-                    .filter(stat -> stat.getUri().equals(request.getRequestURI() + "/" + dto.getId()))
-                    .findFirst()
-                    .ifPresent(stat -> dto.setViews(stat.getHits()));
-        }
+        dtos.forEach(dto -> stats.stream()
+                .filter(stat -> stat.getUri().equals(request.getRequestURI() + "/" + dto.getId()))
+                .findFirst()
+                .ifPresent(stat -> dto.setViews(stat.getHits())));
 
         if (dtos.isEmpty()) {
             throw new ValidationException("Нет подходящих событий");
-        } else {
-            return dtos;
         }
+        return dtos;
     }
 
     @Override
     public EventFullDto getEventById(Long id, HttpServletRequest request) {
-        EventFullDto eventFullDto = eventMapper.toFullDto(checkEventService.checkPublishedEvent(id));
+        Event event = checkEventService.checkPublishedEvent(id);
+        EventFullDto eventFullDto = eventMapper.toFullDto(event);
         hitStats(request);
-        eventFullDto.setViews(getStats(request).getFirst().getHits());
+
+        List<StatsDto> stats = getStats(request.getRequestURI(), Collections.singletonList(request.getRequestURI()));
+        if (!stats.isEmpty()) {
+            eventFullDto.setViews(stats.getFirst().getHits());
+        }
         return eventFullDto;
     }
 
     private void hitStats(HttpServletRequest request) {
-        client.addHit(EndpointHitDto.builder().app(app).uri(request.getRequestURI()).ip(request.getRemoteAddr())
-                .timestamp(LocalDateTime.now()).build());
+        try {
+            statsClient.saveHit(EndpointHitDto.builder()
+                    .app(app)
+                    .uri(request.getRequestURI())
+                    .ip(request.getRemoteAddr())
+                    .timestamp(LocalDateTime.now())
+                    .build());
+        } catch (Exception e) {
+            log.error("Ошибка при сохранении статистики: {}", e.getMessage());
+        }
     }
 
-    private List<StatsDto> getStats(HttpServletRequest request) {
-        return client.getStats(minTime.format(formatter),
-                maxTime.format(formatter), List.of(request.getRequestURI()), true);
+    private List<StatsDto> getStats(String requestUri, List<String> uris) {
+        try {
+            return statsClient.getStats(
+                    minTime.format(formatter),
+                    maxTime.format(formatter),
+                    uris,
+                    true
+            );
+        } catch (Exception e) {
+            log.error("Ошибка при получении статистики для URI {}: {}", requestUri, e.getMessage());
+            return Collections.emptyList();
+        }
     }
 }
